# vader

./: Cargo.toml  README.md
src/: app.rs  main.rs  mpc.rs  ui.rs  utils.rs
src/handlers/: common_keys.rs  list_queue.rs  list_songs.rs  mod.rs  search.rs
