[package]
name = "vader"
authors = ["João Vitor Silveira Ribeiro <joaovitorsrs7@gmail.com>"]
description = "a terminal based mpd client"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }
crossterm = "0.25.0"
mpd = "0.0.12"
tokio = {version =  "1.24.2", features = ["full"] }
audiotags = "0.4.1"
